[package]
name = "msp430-atomic"
authors = ["Vadzim Dambrouski <pftbest@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["msp430", "atomics"]
description = "Atomic operations for MSP430 microcontrollers"
documentation = "https://docs.rs/msp430-atomic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pftbest/msp430-atomic"
version = "0.1.5"

[profile.release]
opt-level = "s"
